Email verification -> totp auth

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -30,6 +30,10 @@
     <Resource Include="appsettings.Development.json" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
   <Import Project="..\Shared\Shared.projitems" Label="Shared" />
 
 </Project>
